; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/intl/extr_plural.c_new_exp_2.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/intl/extr_plural.c_new_exp_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expression = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.expression* (i32, %struct.expression*, %struct.expression*)* @new_exp_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.expression* @new_exp_2(i32 %0, %struct.expression* %1, %struct.expression* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.expression*, align 8
  %6 = alloca %struct.expression*, align 8
  %7 = alloca [2 x %struct.expression*], align 16
  store i32 %0, i32* %4, align 4
  store %struct.expression* %1, %struct.expression** %5, align 8
  store %struct.expression* %2, %struct.expression** %6, align 8
  %8 = load %struct.expression*, %struct.expression** %5, align 8
  %9 = getelementptr inbounds [2 x %struct.expression*], [2 x %struct.expression*]* %7, i64 0, i64 0
  store %struct.expression* %8, %struct.expression** %9, align 16
  %10 = load %struct.expression*, %struct.expression** %6, align 8
  %11 = getelementptr inbounds [2 x %struct.expression*], [2 x %struct.expression*]* %7, i64 0, i64 1
  store %struct.expression* %10, %struct.expression** %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = getelementptr inbounds [2 x %struct.expression*], [2 x %struct.expression*]* %7, i64 0, i64 0
  %14 = call %struct.expression* @new_exp(i32 2, i32 %12, %struct.expression** %13)
  ret %struct.expression* %14
}

declare dso_local %struct.expression* @new_exp(i32, i32, %struct.expression**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
